# codex-switcher

./: README.md  package.json
docs/superpowers/plans/: 2026-07-05-codex-access-token.md
src/: App.tsx  TrayMenu.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  tray.rs  types.rs  web.rs
src-tauri/src/api/: usage.rs
src-tauri/src/auth/: storage.rs  switcher.rs  token_refresh.rs
src-tauri/src/commands/: account.rs  account_stats.rs  oauth.rs  process.rs  usage.rs
src/components/: AccountCard.tsx  AccountUsageStats.tsx  AddAccountModal.tsx
src/hooks/: useAccounts.ts
src/lib/: autoWarmup.ts
src/types/: index.ts
